Add SnippetExtractor and spec

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -20,7 +20,7 @@ verticalMultiline.newlineBeforeImplicitKW = false
 includeCurlyBraceInSelectChains = false
 includeNoParensInSelectChains = false
 
-optIn.breakChainOnFirstMethodDot = false
+optIn.breakChainOnFirstMethodDot = true
 
 // Rewrite Rules
 rewrite.rules = [SortModifiers]
